--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <h1>Data Analytics Tutorials in Forestry</h1>
-    <img src="prf_image.jpg" alt="PRF Image" id="banner-image">
+    <img id="banner-image" src="https://opendata.nfis.org/mapserver/PRF_Layout.jpg" alt="PRF Image" width="900" height="1000">
   </header>
 
   <nav>
