added table order values

--- a/index.html
+++ b/index.html
@@ -20,30 +20,35 @@
         <thead>
           <tr>
             <th>Tutorial</th>
+            <th>Order</th>
             <th>Link</th>
           </tr>
         </thead>
         <tbody>
           <tr>
             <td>Data Wrangling</td>
+            <td>1</td>
             <td><a
                 href="https://colab.research.google.com/github/subornaa/Data-Analytics-Tutorials/blob/main/Data_Wrangling_Tutorials.ipynb">View</a>
             </td>
           </tr>
           <tr>
             <td>Descriptive Analytics</td>
+            <td>2</td>
             <td><a
                 href="https://colab.research.google.com/github/subornaa/Data-Analytics-Tutorials/blob/main/Descriptive_Analytics_Tutorials.ipynb">View</a>
             </td>
           </tr>
           <tr>
             <td>Geospatial Data</td>
+            <td>3</td>
             <td><a
                 href="https://colab.research.google.com/github/subornaa/Data-Analytics-Tutorials/blob/main/Geospatial_Data_Tutorials.ipynb">View</a>
             </td>
           </tr>
           <tr>
             <td>Lasso and Ridge Regression</td>
+            <td>4</td>
             <td><a href="https://example.com/time-series">View</a></td>
           </tr>
         </tbody>
