make edits to the website

--- a/index.html
+++ b/index.html
@@ -52,8 +52,13 @@
             <td><a href="https://colab.research.google.com/github/subornaa/Data-Analytics-Tutorials/blob/main/Lasso_and_Ridge_Regression.ipynb">View</a></td>
           </tr>
           <tr>
-            <td>Unsupervised Learning</td>
+            <td>CART: Classification and Regression Trees</td>
             <td>5</td>
+            <td><a href="https://colab.research.google.com/github/subornaa/Data-Analytics-Tutorials/blob/main/CART.ipynb">View</a></td>
+          </tr>
+          <tr>
+            <td>Unsupervised Learning</td>
+            <td>6</td>
             <td><a href="https://colab.research.google.com/github/subornaa/Data-Analytics-Tutorials/blob/main/Unsupervised_Learning.ipynb">View</a></td>
           </tr>
         </tbody>
@@ -91,11 +96,13 @@
 
     <section id="tutorials">
       <h2>Using Tutorials</h2>
-      <p>These tutorials are designed to be run on <a href="https://colab.research.google.com/"><strong>Google Collab</strong></a>. Jupyter notebooks can be downloaded and run locally, but a local python environment will need to be setup. We recommend using the <a href="https://docs.astral.sh/uv/">uv</a> python package manager to do this. uv can install packages listed in the <code>pyproject.toml</code> file located in this repository. If you wish to set up a local python environment using an alternative package manager, such as conda, please consult the <code>pyproject.toml</code> to get the correct package versions.</p>
+      <p>These tutorials are designed to be run on <a href="https://colab.research.google.com/"><strong>Google Collab</strong></a>. 
+        Jupyter notebooks can be downloaded and run locally, but a local python environment will need to be setup. We recommend 
+        using the <a href="https://docs.astral.sh/uv/">uv</a> python package manager to do this. uv can install packages listed 
+        in the <code>pyproject.toml</code> file located in this repository. If you wish to set up a local python environment using 
+        an alternative package manager, such as conda, please consult the <code>pyproject.toml</code> to get the correct package 
+        versions.</p>
 
-      <h2>Data Description</h2>
-
-      <p>The tutorials will use several different datasets from the PRF, these are described in more detail in the following sections.</p>
     </section>
 
     <section id="data">
