--- a/index.html
+++ b/index.html
@@ -84,24 +84,22 @@
             <tbody>
                 <tr>
                     <td>Dr. Suborna Ahmed</td>
-                    <td>Forest Resources Management, UBC</td>
+                    <td>Forest Biometrics, Forest Resources Management, Faculty of Forestry, University of British Columbia</td>
                 </tr>
                 <tr>
                     <td>Harry Seely</td>
                     <td>
-                        University of British Columbia <br>
-                        Faculty of Forestry, Department of Forest Resources Management <br>
-                        Integrated Remote Sensing Studio
+                        Integrated Remote Sensing Studio, Forest Resources Management, Faculty of Forestry, University of British Columbia
                     </td>
                 </tr>
                 <tr>
                     <td>Gurmandeep Bal</td>
-                    <td>Computer Science, UBC</td>
+                    <td>Computer Science, University of British Columbia</td>
                 </tr>
 
                 <tr>
                     <td>Apram Ahuja</td>
-                    <td>Computer Science, UBC</td>
+                    <td>Computer Science, University of British Columbia</td>
                 </tr>
             </tbody>
         </table>
