--- a/index.html
+++ b/index.html
@@ -524,6 +524,16 @@
             </ul>
         </section>
 
+        <h2>Acknowledgments</h2>
+        <p>
+            This project was developed with support from the UBC Open Educational Resources (OER) Excellence and Impact
+            Award, which provided funding to advance the creation of openly available teaching and learning materials.
+        </p>
+        <p>
+            We also gratefully acknowledge the UBC Work Learn Program, which supported student collaborators whose
+            contributions were central to the development of this resource.
+        </p>
+
         <h2>Creative Commons License</h2>
         <p>This tutorial series is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0
             International License. You may share, adapt the content and may distribute your contributions under the same
